tenzir/integration/data/reference/pipelines_local/test_chart_attributes/step_06.ref
error: invalid chart type
 --> <input>:1:30
  |
1 | from stdin read json | chart donuttt --value b
  |                              ^^^^^^^ 
  |
  = hint: valid chart types are: line, area, bar, donut
  = docs: https://docs.tenzir/operators/chart
